
public static class AnimatorKeys
{
    #region Zombie
    public const string zombieIsIdle = "isIdle";
    public const string zombieDie = "Die";
    public const string zombieIsDead = "isDead";
    public const string zombieIsWalking = "isWalking";
    public const string zombieAttack = "isAttacking";
    public const string zombieHit = "Hit";
    #endregion
}
